# ADaGAD-HNC

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  paper-writing-next-steps.md  pyproject.toml  requirements.txt
configs/: default.yaml
configs/data/: acm.yaml  blogcatalog.yaml  citeseer.yaml  cora.yaml  flickr.yaml  pubmed.yaml
configs/model/: adagad_hnc.yaml  baselines.yaml
configs/train/: curriculum.yaml  standard.yaml
infra/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/scripts/: bootstrap_gpu.sh
scripts/: export_results.py  prepare_data.py  run_ablations.sh  run_baselines.sh
src/: __init__.py  cli.py  main.py
src/data/: __init__.py  dataset.py  loaders.py  splits.py  transforms.py  validation.py
src/eval/: __init__.py  calibration.py  evaluator.py  robustness.py
src/experiments/: __init__.py  ablations.py  report.py  run_multiseed.py  run_single.py
src/losses/: __init__.py  contrastive.py  negative_mining.py  reconstruction.py  total_loss.py
src/model/: __init__.py  adagad_hnc.py  discriminators.py  encoders.py  fusion.py  readout.py  reconstruction.py
src/train/: __init__.py  checkpoint.py  engine.py  hooks.py  scheduler.py
src/utils/: __init__.py  io.py  logger.py  metrics.py  registry.py  seed.py
tests/: test_data_pipeline.py  test_losses.py  test_model_forward.py  test_negative_mining.py  test_training_smoke.py
