[[tool.poetry]]
name = "adagad-hnc"
version = "0.1.0"
description = "Adaptive Graph Anomaly Detection with Hard-Negative Curriculum"
authors = ["AdaGAD-HNC Authors <authors@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2"
torch-geometric = "^2.4"
numpy = "^1.26"
scipy = "^1.11"
scikit-learn = "^1.4"
pandas = "^2.2"
pyyaml = "^6.0"
tqdm = "^4.66"
hydra-core = "^1.3"
omegaconf = "^2.3"
tensorboard = "^2.16"
wandb = "^0.16"
einops = "^0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
black = "^24.0"
isort = "^5.13"
ruff = "^0.4"
mypy = "^1.9"
pre-commit = "^3.6"
ipython = "^8.22"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["src", "tests", "scripts"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["B905"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_ignores = false
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --disable-warnings"
